# gutenpedia

backend/: .gitignore  README.md  pyproject.toml  start-neuronpedia.sh
backend/data/: README.md  activations.parquet  dataset.csv  dataset_spec.py  db.py  extract_features.py  fetch_activations.py  fetch_explanations.py  fetch_features.py  stream_activations_to_db.py  stream_explanations_to_db.py  stream_features_to_db.py  stream_to_db.py
backend/db/: create_tables.sql  create_tables_next.sql
backend/express/: package-lock.json  package.json  server.js  server.ts
backend/inference/: Dockerfile  README.md  pyproject.toml  start.py
backend/inference/neuronpedia-inference-client/neuronpedia_inference_client/models/: activation_topk_by_token_post_request.py
backend/inference/neuronpedia_inference/: args.py  config.py  server.py
backend/inference/neuronpedia_inference/endpoints/activation/: topk_by_token.py
frontend/: README.md  auth.ts  env.example  package-lock.json  package.json  vite.config.ts
frontend/app/: page.tsx
frontend/app/d/: page.tsx
frontend/app/d/datasets/: page.tsx
frontend/app/d/features/: FeaturesPage.tsx  layout.tsx  page.tsx
frontend/components/auth/: SignInButton.tsx
frontend/lib/actions/: datasets.ts  users.ts
frontend/src/: App.tsx  main.tsx
next/: package-lock.json  package.json
next/app/: page.tsx
next/app/d/: layout.tsx  page.tsx
next/components/auth/: SignOutButton.tsx
next/components/nav/: Sidebar.tsx
next/lib/: db.ts  schema.ts
next/lib/actions/: auth.ts  datasets.ts  features.ts
(+20 files in other folders)
